--- a/app/src/main/res/layout/fragment_my_info.xml
+++ b/app/src/main/res/layout/fragment_my_info.xml
@@ -3,19 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.MyInfoFragment">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/profile_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="@dimen/height_width_150dp"
+        android:layout_height="@dimen/height_width_200dp"
         android:padding="10dp"
+        android:src="@drawable/pic"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/height_width_150dp"
-        android:scaleType="centerCrop"
-        app:civ_border_color="@color/gray"
-        app:civ_border_width="2dp" />
+        android:layout_marginTop="@dimen/height_width_150dp" />
 
     <TextView
         android:layout_width="match_parent"
